missing background of issue 22

--- a/src/styl/3-modules/practices/dropdown.styl
+++ b/src/styl/3-modules/practices/dropdown.styl
@@ -57,6 +57,7 @@
     +is(active)
       text-align: left
       border: none
+      background gray
       &::before
         transform: rotate(-45deg)
         background: red
